[package]
name = "core-model-coupling"
version = "0.1.0"
authors = ["calvin"]
build = "src/build.rs"

[lib]
name = "core_model_coupling"
crate-type = ["cdylib"]

[dependencies]
futures = "0.1.14"
hyper = "0.11.2"
tokio-core = "0.1"
chan-signal = "0.3.1"
chan = "0.1.21"

[build-dependencies]
cbindgen = "0.5.2"